syntax = "proto3";

package pb;

option go_package = "github.com/SamMHD/simple-broker/pb";

message TransferMessageRequest {
    string message = 1;
}

message TransferMessageResponse {}